tests/typecheck/should_fail/T17213.hs
{-# LANGUAGE Haskell2010 #-}
module T17213 where

import T17213a

g = foo
